--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": ">=1.13.2",
+    "multer": ">=1.0.0",
     "ejs": ">=2.3.3",
     "express": ">=4.15.2",
     "express-session": "^1.15.2",
