--- a/Data/config.json
+++ b/Data/config.json
@@ -1,6 +1,6 @@
 {
-  "unauthorized": ["login","register", "accountCreated"],
-  "user": ["login", "main", "user", "register"],
-  "admin": ["login", "main", "user", "admin", "register"],
-  "all_paths":["login", "main", "user", "admin", "register", "accountCreated", "404", "403", "401"]
+  "unauthorized": ["login","register", "accountCreated","upload"],
+  "user": ["login", "main", "user", "register","upload"],
+  "admin": ["login", "main", "user", "admin", "register","upload"],
+  "all_paths":["login", "main", "user", "admin", "register", "accountCreated","upload", "404", "403", "401"]
 }
